# dwarf-p-ice3-dace

./: .coverage  .gitignore  CMakeLists.txt  README.md  TEST_COVERAGE_REPORT.md  add.sdfg  cloud_fraction_1.sdfg  cloud_fraction_2.sdfg  condensation.sdfg  hello.py  ice_adjust.sdfg  pyproject.toml
.dacecache/: CMakeLists.txt
.dacecache/add/: program.sdfg
.dacecache/add/include/: add.h  hash.h
.dacecache/add/map/: map_cpp.json  map_py.json
.dacecache/add/sample/: CMakeLists.txt  add_main.cpp  modi_add.f90  test_add.f90
.dacecache/cloud_fraction_1/: dace_files.csv  program.sdfg
.dacecache/cloud_fraction_1/include/: cloud_fraction_1.h  hash.h
.dacecache/cloud_fraction_1/map/: map_cpp.json  map_py.json
.dacecache/cloud_fraction_1/sample/: CMakeLists.txt  cloud_fraction_1_main.cpp  modi_cloud_fraction_1.f90  test_cloud_fraction_1.f90
.dacecache/cloud_fraction_2/: dace_files.csv  program.sdfg
.dacecache/cloud_fraction_2/include/: cloud_fraction_2.h  hash.h
.dacecache/cloud_fraction_2/map/: map_cpp.json  map_py.json
.dacecache/cloud_fraction_2/sample/: CMakeLists.txt  cloud_fraction_2_main.cpp  modi_cloud_fraction_2.f90  test_cloud_fraction_2.f90
.dacecache/condensation/: dace_files.csv  program.sdfg
.dacecache/condensation/include/: condensation.h  hash.h
.dacecache/condensation/map/: map_cpp.json  map_py.json
.dacecache/condensation/sample/: CMakeLists.txt  condensation_main.cpp  modi_condensation.f90  test_condensation.f90
.dacecache/ice3_stencils_thermo_thermodynamic_fields/: dace_files.csv  program.sdfg
.dacecache/ice3_stencils_thermo_thermodynamic_fields/include/: hash.h  ice3_stencils_thermo_thermodynamic_fields.h
.dacecache/ice3_stencils_thermo_thermodynamic_fields/map/: map_cpp.json  map_py.json
.dacecache/ice3_stencils_thermo_thermodynamic_fields/sample/: ice3_stencils_thermo_thermodynamic_fields_main.cpp
.dacecache/ice_adjust/: dace_files.csv  program.sdfg
.dacecache/ice_adjust/include/: hash.h  ice_adjust.h
.dacecache/ice_adjust/map/: map_cpp.json  map_py.json
.dacecache/ice_adjust/sample/: CMakeLists.txt  ice_adjust_main.cpp  modi_ice_adjust.f90  modi_ice_adjust_dace.f90  test_ice_adjust.f90
.dacecache/sigrc_computation/: dace_files.csv  program.sdfg
.dacecache/sigrc_computation/include/: hash.h  sigrc_computation.h
.dacecache/sigrc_computation/map/: map_cpp.json  map_py.json
.dacecache/sigrc_computation/sample/: sigrc_computation_main.cpp
.dacecache/tests_test_dace_integration_dace_operation/: dace_files.csv  program.sdfg
.dacecache/tests_test_dace_integration_dace_operation/include/: hash.h  tests_test_dace_integration_dace_operation.h
.dacecache/tests_test_dace_integration_dace_operation/map/: map_cpp.json  map_py.json
.dacecache/tests_test_dace_integration_dace_operation/sample/: tests_test_dace_integration_dace_operation_main.cpp
.dacecache/tests_test_dace_integration_simple_add/: dace.conf  dace_files.csv  program.sdfg
.dacecache/tests_test_dace_integration_simple_add/include/: hash.h  tests_test_dace_integration_simple_add.h
.dacecache/tests_test_dace_integration_simple_add/map/: map_cpp.json  map_py.json
.dacecache/tests_test_dace_integration_simple_add/sample/: tests_test_dace_integration_simple_add_main.cpp
.dacecache/thermodynamic_fields/: dace_files.csv  program.sdfg
.dacecache/thermodynamic_fields/include/: hash.h  thermodynamic_fields.h
.dacecache/thermodynamic_fields/map/: map_cpp.json  map_py.json
.dacecache/thermodynamic_fields/sample/: main.f90  modi_thermo.f90  test_thermo.f90  thermodynamic_fields_main.cpp
.github/workflows/: gpu-tests.yml
sandbox/: CMakeLists.txt  add.h  add_main.cpp  call_sdfg.f90  driver.f90  handle_sdfg.py  include  plot.py
sandbox/.dacecache/add/: Makefile  cmake_install.cmake  program.sdfg
sandbox/.dacecache/add/include/: add.h  hash.h
sandbox/.dacecache/add/map/: map_py.json
sandbox/.dacecache/multiply/: program.sdfg
sandbox/.dacecache/multiply/include/: hash.h
sandbox/.dacecache/multiply/sample/: multiply_main.cpp
sdfg/: cloud_fraction_1.sdfg  cloud_fraction_2.sdfg  condensation.sdfg  ice_adjust.sdfg  thermo.sdfg
src/drivers/: cli.py  compare.py  config.py  core.py
src/dwarf_ice3_gt4py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ice3/components/: aro_adjust.py  ice_adjust_split.py  rain_ice.py
src/ice3/functions/: ice_adjust.py  tiwmx.py
src/ice3/initialisation/: state_ice_adjust.py
src/ice3/phyex_common/: constants.py  gamma_inc.py  namparar.py  param_ice.py  phyex.py  rain_ice_descr.py  rain_ice_fields_address.py  rain_ice_param.py  xker_sdryg.py
src/ice3/stencils/: add.py  aro_filter.py  cloud_fraction_split.py  condensation_split.py  ice4_correct_negativities.py  ice4_fast_rg.py  ice4_fast_rg_dace.py  ice4_fast_rg_split.py  ice4_fast_ri.py  ice4_fast_rs.py  ice4_nucleation.py  ice4_rimltc.py  ice4_rrhong.py  ice4_slow.py  ice4_stepping.py  ice4_tendencies.py  ice4_warm.py  multiply_ab2c.py  rain_ice.py  rain_ice_thermo.py  sedimentation.py  sigma_rc_dace.py  thermo.py
src/ice3/stencils_fortran/: mode_aro_adjust.F90  mode_sigrc.F90  mode_thermo.F90
src/ice3/utils/: dict_to_class.py  typingx.py
src/ice3_gt4py/: __init__.py
src/ice3_gt4py/components/: aro_adjust.py  ice_adjust_split.py
src/ice3_gt4py/functions/: __init__.py  compute_ice_frac.py  condensation_src_1d.py  erf.py  gamma.py  ice_adjust.py  icecloud.py  interp_micro.py  sea_town_masks.py  sedimentation_flux.py  sign.py  stepping.py  subgrid_mf.py  temperature.py  tiwmx.py  upwind_sedimentation.py
src/ice3_gt4py/initialisation/: state.py  state_ice_adjust.py  state_rain_ice.py  utils.py
src/ice3_gt4py/phyex_common/: constants.py  dimphyex.py  gamma_inc.py  (+5 more)
src/testprogs_data/: decode.md  ice_adjust.yaml  rain_ice.yaml
tests/: conftest.py  main.py  run_tests.py  test_components.py  test_dace_integration.py  test_integration.py  test_stencils.py  test_utils_and_data.py
tests/compilation/: test_compile_stencils.py
tests/dace/: test_sigrc_computation_dace.py
tests/repro/: test_cloud_fraction_split.py  test_condensation.py
(+42 files in other folders)
