[project]
name = "dwarf-p-ice3-dace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dace",
    "netcdf4>=1.7.2",
    "numpy<2.0",
    "scipy>=1.15.3",
    "typer>=0.15.2",
    "xarray>=2025.4.0",
]

[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools>=65.5.0', 'wheel']

[project.scripts]
testprogs-data = "testprogs_data.main:app"
standalone-model = "drivers.cli:app"

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "ruff>=0.11.11",
]
gpu = [
    "cupy==14.0.0a1",
    "cupy-xarray>=0.1.4",
]
tests = [
    "pytest>=8.3.5",
    "pytest-cov>=6.2.1",
]
fortran = [
    "fprettify>=0.3.7",
]

[tool.uv.sources]
dace = { git = "https://github.com/spcl/dace.git" }
